--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/exchange-rates-api": "^1.0.0",
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -22,9 +23,11 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "currency-converter-lt": "^2.0.0-beta.0",
+    "exchange-rates-api": "^1.1.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "joi": "^17.7.1",
-    "mongoose": "^6.9.2",
-    "express-async-handler": "^1.1.4"
+    "mongoose": "^6.9.2"
   }
 }
